<resources>

    <string name="app_name">SIG-AR</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">SIG-AR</string> 
    <string name="satellite_image">Satellite Image Activation, click on it to activate/deactivate the satellite view</string>   
	<string name="locationfound">Center map to the user location</string>
	<string name="go_back">go back</string>
	<string name="map_modification">Modify content of map and AR view</string>
	<string name="quit">Quit the application</string>
	
	<color name="black">#000000</color>
	<color name="white">#ffffff</color>
	<color name="blue">#5ce9ff</color>
	<color name="green">#a3e815</color>
	<color name="red">#e84700</color>
	<color name="orange1">#ff934c</color>
	<color name="orange2">#f4d26c</color>
	
	<string name="label_latitude">Latitude</string>
	<string name="label_longitude">Longitude</string>
	<string name="label_altitude">Altitude</string>
	<string name="label_angle">Angle</string>
	
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	
	<string name="label_name">Name</string>
	<string name="label_category">Category</string>
	
	<string name="pref_arview">AR view</string>
	<string name="pref_database">Database</string>
	<string name="pref_about">About</string>
	<string name="prefs_summ_arview1">You can choose to display the compass or not</string>
	<string name="prefs_summ_arview2">You can choose to display the grid or not</string>
	<string name="prefs_summ_arview3">You can choose to disable or enable the default light</string>
	<string name="prefs_summ_database">Preferences related to Database</string>
	<string name="prefs_summ_about">About</string>
	
	<string name="about">SIG-AR is an Augmented Reality application developed on Android by six students from the Ecole Centrale (Nantes, France). Designed to help architects show their ideas, it brings 3D models to life in a very easy way. With SIG-AR, your environment becomes more than reality. It is now your field of expression.</string>
	
	<string name="settings">Settings</string>
	
	<string name="license">http://creativecommons.org/licenses/by-sa/3.0  Creative Commons Attribution-ShareAlike 3.0 Unported License</string>
	
    <string-array name="sort_array">
        <item>Name</item>
        <item>Category</item>
    </string-array>
	
	
</resources>