<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory 
        android:title="@string/pref_arview"
        android:layout="@layout/prefcategory"
        android:key="pref_key_arview">
        <CheckBoxPreference
            android:key="pref_key_compass"
            android:summary="@string/prefs_summ_arview1"
            android:title="Hide Compass"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_key_grid"
            android:summary="@string/prefs_summ_arview2"
            android:title="Hide Grid"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="pref_key_light"
            android:summary="@string/prefs_summ_arview3"
            android:title="Disable default light"
            android:defaultValue="false" />
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/pref_database"
        android:layout="@layout/prefcategory"
        android:key="pref_key_database">
       <EditTextPreference
            android:key="pref_db_name"
            android:summary="Click here to modify database name. Your current database is : sigar_test"
            android:defaultValue="sigar_test"
            android:title="Database name" />
       <EditTextPreference
            android:key="pref_db_address"
            android:summary="Click here to modify database address. Current address is : 54.246.97.87"
            android:defaultValue="54.246.97.87"
            android:title="Address" />
       <EditTextPreference
            android:key="pref_db_port"
            android:summary="Click here to modify database port. Current port is : 5432"
            android:defaultValue="5432"
            android:title="Port" />
       <EditTextPreference
            android:key="pref_db_login"
            android:summary="Click here to modify your login. Your current login is : sigar"
            android:defaultValue="sigar"
            android:title="Login" />
       <EditTextPreference
            android:key="pref_db_password"
            android:summary="Enter your password"
            android:password="true"
            android:defaultValue="rubyECN#2013"
            android:title="Password" />
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/pref_about"
        android:layout="@layout/prefcategory"
        android:key="pref_key_about">
        <Preference
                android:title="About"
                android:summary="Click here to learn more about this project"
                android:key="readabout"/>
    </PreferenceCategory>
    
</PreferenceScreen>