<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/icons"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/action_settings" />

    <TextView
        android:id="@+id/scene_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
		android:gravity="center_vertical"
        android:layout_weight="1"
        android:text="@string/label_name"
        android:textSize="30px" />

    <TextView
        android:id="@+id/scene_category"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_marginRight="5dp"
        android:text="@string/label_category"
        android:textSize="30px" />

    <TextView
        android:id="@+id/scene_latitude"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        		android:gravity="center_vertical"
        
        android:layout_marginRight="5dp"
        android:text="@string/label_latitude"
        android:textSize="30px" />

    <TextView
        android:id="@+id/scene_longitude"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_marginRight="5dp"
        android:text="@string/label_longitude"
        android:textSize="30px" />

    <TextView
        android:id="@+id/scene_altitude"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_marginRight="7dp"
        android:text="@string/label_altitude"
        android:textSize="30px" />

    <ImageButton
        android:id="@+id/button_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/action_about" />

    <ImageButton
        android:id="@+id/button_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/content_edit" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>