<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal" >
            <TextView
                android:id="@+id/titlemodelname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="Model name:" />
            <TextView
                android:id="@+id/modelname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_alignTop="@+id/titlemodelname"
                android:layout_toRightOf="@+id/titlemodelname"
                android:text="displayedmodelname" />            
            <TextView
                android:id="@+id/titleid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/titlemodelname"
                android:text="Id :" />
            <TextView
                android:id="@+id/modelid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_below="@+id/titlemodelname"
                android:layout_alignTop="@+id/titleid"
                android:layout_toRightOf="@+id/titleid"
                android:text="displayedid" />  
           <TextView
                android:id="@+id/titlecategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/titleid"
                android:text="Category :" />
            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_below="@+id/titleid"
                android:layout_alignTop="@+id/titlecategory"
                android:layout_toRightOf="@+id/titlecategory"
                android:text="displayedcategory" />       
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/titlecategory"
                android:text="description" />
            
      <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout1"
        android:layout_margin="10dp"
        android:layout_below="@+id/description">

    <TableRow>
        <TextView
            android:id="@+id/titlelongitude"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/label_longitude" />
        <TextView
            android:id="@+id/longitude"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="longitude"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>
        
        <TableRow>
        <TextView
            android:id="@+id/titlelatitude"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/label_latitude"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/latitude"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="latitude"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>
        
        <TableRow >
        <TextView
            android:id="@+id/titlealtitude"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/label_altitude"
            android:textAppearance="?android:attr/textAppearanceSmall" />
       	<TextView
            android:id="@+id/altitude"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="altitude"
            android:textAppearance="?android:attr/textAppearanceSmall" />
		</TableRow>
    	    
    </TableLayout>
    
       	<ImageButton
        	android:id="@+id/ok"
        	android:contentDescription="@string/ok"
        	android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
        	android:layout_below="@+id/tableLayout1"
        	android:layout_alignRight="@+id/tableLayout1"
        	android:src="@drawable/navigation_accept"
        	/>
     
</RelativeLayout>